<resources>
    <string name="app_name">Smart Detect</string>

    <string name="prompt_email">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_con_topic">Control Topic</string>
    <string name="prompt_com_topic">Communication Topic</string>
    <string name="action_load_qr">Load from QR code</string>
    <string name="action_sign_in">Sign in</string>

    <string name="people_count_desc">People Count</string>
    <string name="admins_online_desc">Admins Online</string>

    <string name="preference_file_key">ru.mai.smartdetect.PREFERENCE_FK</string>
    <string name="preference_email">un</string>
    <string name="preference_password">pw</string>
    <string name="preference_con_topic">cnt</string>
    <string name="preference_com_topic">cmt</string>

    <string name="iot_cloud_host">cloud.iotmanul.xyz</string>

    <string name="error_extra_name">error</string>
    <string name="empty_mqtt_message">-</string>

</resources>