<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MetricActivity">

    <TextView
        android:id="@+id/people_count_desc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/people_count_desc"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/people_count"
        android:layout_width="0dp"
        android:layout_marginTop="5dp"
        android:layout_height="wrap_content"
        android:text="@string/empty_mqtt_message"
        android:textAlignment="center"
        android:textColor="@color/purple_700"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/people_count_desc" />


    <TextView
        android:id="@+id/admins_online_desc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/admins_online_desc"
        android:textAlignment="center"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/people_count" />

    <TextView
        android:id="@+id/admins_online"
        android:layout_width="0dp"
        android:layout_marginTop="5dp"
        android:layout_height="wrap_content"
        android:text="@string/empty_mqtt_message"
        android:textAlignment="center"
        android:textColor="@color/purple_700"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/admins_online_desc" />



</androidx.constraintlayout.widget.ConstraintLayout>